WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267370
[GStreamer] media/media-vp8-webm-error.html is a permanent failure
https://bugs.webkit.org/show_bug.cgi?id=267370
Summary
[GStreamer] media/media-vp8-webm-error.html is a permanent failure
Jean-Yves Avenard [:jya]
Reported
2024-01-10 14:39:51 PST
Test introduced in
bug 267165
is a permanent failure as the MediaPlayerPrivateGStreamer doesn't detect the decoding error (one video sample has been made invalid by having a few 0xFF added)
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2024-01-11 00:52:55 PST
Is that test setting the video to play? The decode errors won't happen otherwise.
Philippe Normand
Comment 2
2024-01-12 05:04:23 PST
Two issues here: *
https://gitlab.freedesktop.org/gstreamer/gstreamer/-/merge_requests/5916
* GstVideoDecoder doesn't emit error messages to the bus, we'd need to set max-errors=0 on it, and also handle GST_STREAM_ERROR_DECODE properly in handleMessage...
Philippe Normand
Comment 3
2024-01-16 03:23:23 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22813
EWS
Comment 4
2024-01-24 07:23:27 PST
Committed
273410@main
(7b9b52800ba5): <
https://commits.webkit.org/273410@main
> Reviewed commits have been landed. Closing PR #22813 and removing active labels.
Radar WebKit Bug Importer
Comment 5
2024-01-24 07:24:14 PST
<
rdar://problem/121521205
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug