[GStreamer] media/media-vp8-webm-error.html  is a permanent failure https://bugs.webkit.org/show_bug.cgi?id=267370

Reviewed by Xabier Rodriguez-Calvar.

By default GstVideoDecoder doesn't emit error messages on the bus, until its max-errors threshold is
reached. By default its value is -1, so no errors raised to application level. We now set it to 0,
which means that the decoder will notify us starting from the first decoding error.

* LayoutTests/platform/glib/TestExpectations:
* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::handleMessage):
(WebCore::MediaPlayerPrivateGStreamer::configureVideoDecoder):

Canonical link: https://commits.webkit.org/273410@main